--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
 <!doctype html>
-<html>
-  <head><meta charset="utf-8"></head>
-  <body>Job tracker</body>
-</html>
+<div id="app"></div>
+<script type="module" src="/src/main.js"></script>
