--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <!doctype html>
+<p>TESTI 123</p>
+<link rel="stylesheet" href="./src/styles.css">
 <div id="app"></div>
-<script type="module" src="/src/main.js"></script>
+<script type="module" src="./src/main.js"></script>
