--- a/index.html
+++ b/index.html
@@ -4,3 +4,4 @@
 <div id="app"></div>
 <script type="module" src="./src/main.js"></script>
 <div id="jobs"></div>
+<a href="./src/login_page.html">Kirjaudu</a>
