--- a/src/login_page.html
+++ b/src/login_page.html
@@ -14,7 +14,9 @@
 
     document.getElementById("login").onclick = async () => {
       const email = document.getElementById("email").value;
-      const { error } = await supabase.auth.signInWithOtp({ email });
+      const { error } = await supabase.auth.signInWithOtp({ email, options: {
+        emailRedirectTo: "https://tiuliina.github.io/job-tracker/src/login_page.html"
+      } });
       alert(error ? error.message : "Check your email");
     };
   </script>
