--- a/index.html
+++ b/index.html
@@ -4,7 +4,4 @@
 <div id="app"></div>
 <script type="module" src="./src/main.js"></script>
 <div id="jobs"></div>
-<iframe
-  src="./src/login_page.html"
-  style="width:100%;height:400px;border:none;"
-></iframe>
+<a href="./src/login_page.html">Kirjaudu</a>
